<resources>
    <string name="app_name">Splitwise Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip">Trip</string>
    <string name="home">Home</string>
    <string name="couple">Couple</string>
    <string name="other">Other</string>
    <string name="create_a_group">Create a group</string>
    <string name="done">Done</string>
    <string name="group_name">Group Name</string>
    <string name="type">Type</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="category">Category</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="description_optional">Description (optional)</string>
    <string name="paid_by">Paid by</string>
    <string name="who_pay">who pay</string>
    <string name="split">split</string>
    <string name="equaly">Equaly</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="paid_amount">Paid amount</string>
    <string name="paid">paid</string>
    <string name="description">description</string>
    <string name="you_owe_or_owed_amount_overall">you_owe_or_owed_amount_overall</string>
    <string name="owe_or_owed_amount">owe or owed amount</string>
    <string name="you_owe_group_member">You owe group member</string>
    <string name="plus_other_balances">Plus other balances</string>
    <string name="settle_up">Settle Up</string>
    <string name="tottls">Tottls</string>
    <string name="balances">Balances</string>
    <string name="create_friend">Create Friend</string>
    <string name="you_borrowed_or_lent">You Borrowed or Lent</string>
    <string name="amount">amount</string>
    <string name="filter">filter</string>
    <string name="total_group_spending">Total Group Spending</string>
    <string name="total_you_paid_for">Total You Paid For</string>
    <string name="your_total_share">Your Total Share</string>
    <string name="owe_amount">Owe Amount</string>
    <string name="create_group">Create Group</string>
    <string name="you_owe">You owe</string>
    <string name="no_expenses">No Expenses</string>
    <string name="group_type">Group Type</string>
    <string name="no_expenses_here_yet">No Expenses here yet</string>
    <string name="add_group_members">Add Group Members</string>
    <string name="you_lent">You Lent</string>
    <string name="you_borrowed">You Borrowed</string>
    <string name="you_re_the_only_one_here">You\'re the only one here!</string>
    <string name="you_owe_rs_overall">You Are Owe Rs %1$s Overall</string>
    <string name="you_owe_rs">You Are Owe Rs %1$s</string>
    <string name="you_are_owed_rs_overall">You Are Owed Rs %1$s Overall</string>
    <string name="you_are_owed_rs">You Are Owed Rs %1$s</string>
    <string name="you_are_settled_up_overall">You are settled up overall</string>
    <string name="you_are_all_settled_up_in_this_group">You are all settled up in this group</string>
    <string name="you_are_all_settled_up">You are all settled up</string>
    <string name="plus_other_balance">Plus %d Other Balance</string>
    <string name="owes_you">%1$s owes You</string>
    <string name="owes_you_friends">owes You</string>
    <string name="rs">Rs. %1$s</string>
    <string name="you_owes">You owes</string>
    <string name="paid_amount_expenses_details">Paid Amount %1$s</string>
    <string name="paid_by_expenses_details">Paid by %1$s</string>
    <string name="date_expenses_details">Date -: %1$s</string>
    <string name="time_expenses_details">Time -: %1$s</string>
    <string name="description_expenses_details">Description -: %1$s</string>
    <string name="category_expenses_details">Category -: %1$s</string>
    <string name="owes">%1$s owes</string>
    <string name="owes_balances">owes</string>
    <string name="you_owes_group_details">You owes %1$s</string>
    <string name="delete_group">Delete Group</string>
    <string name="group_member">Group Member</string>
    <string name="add_people_to_group">Add People to Group</string>
    <string name="get_back">Get Back</string>
    <string name="you_are_owed">you are owed</string>
    <string name="you_owed">you owe</string>
    <string name="owes_group_member">Owes</string>
    <string name="you_settled_up">You Settled Up</string>
    <string name="settled_up">Settled Up</string>
    <string name="no_expenses_friend">No Expenses</string>
    <string name="owes_you_in_group">%1$s owes You in  \"%2$s\"</string>
    <string name="you_owes_in_group">You owes %1$s in  \"%2$s\"</string>
    <string name="add_friends">Add Friends</string>
    <string name="remind">REMIND</string>
    <string name="settle_up_balances">SETTLE UP</string>
    <string name="owe">owe</string>
    <string name="in_total">in total</string>
    <string name="select_a_balance_to_settle">Select a balance to settle</string>
    <string name="to">to</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_payment">Add Payment</string>
    <string name="expenses">Expenses</string>
    <string name="repay">Repay</string>
    <string name="add_repay">Add Repay</string>
    <string name="select_payer">Select Payer</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="this_payment_was_added_using_the">This payment was added using the  \"record a</string>
    <string name="payment_feature_no_money_has_been_moved">payment\" feature. No money has been moved</string>
    <string name="you_paid">You paid %1$s</string>
    <string name="payer_receiver">%1$s paid %2$s</string>
    <string name="date_time">%1$s %2$s</string>
    <string name="shared_group">Shared group</string>
    <string name="this_month">THIS MONTH</string>
    <string name="last_month">LAST MONTH</string>
    <string name="all_time">ALL TIME</string>
    <string name="all_friends">All Friends</string>
    <string name="outstanding_balance">Outstanding Balance</string>
    <string name="friends_you_owe">Friends You Owe</string>
    <string name="friends_who_owe_you">Friends Who Owe You</string>
    <string name="showing_friends_with_outstanding_balances">Showing friends with outstanding balances</string>
    <string name="showing_groups_with_outstanding_balances">Showing groups with outstanding balances</string>
    <string name="showing_only_friends_you_owe">Showing only friends you owe</string>
    <string name="showing_only_groups_you_owe">Showing only groups you owe</string>
    <string name="showing_only_friends_who_owe_you">Showing only friends who owe you</string>
    <string name="showing_only_groups_that_owe_you">Showing only groups that owe you</string>
    <string name="no_one_to_see_here">No one to see here</string>
    <string name="clear_filter">Clear filter</string>
    <string name="you_do_not_owe_any_friends">You do not owe any friends</string>
    <string name="you_do_not_owed_any_friends">You do not owed any friends</string>
    <string name="as_you_use_splitwise_friends_and">As you use Splitwise, friends and</string>
    <string name="group_mates_will_show_here">group mates will show here</string>
    <string name="group">Group</string>
    <string name="start_a_new_group">Start a new group</string>
    <string name="all_groups">All groups</string>
    <string name="group_you_owe">Group you owe</string>
    <string name="group_that_owe_you">Group that owe you</string>

    <string name="you_do_not_owe_any_group">You do not owe any group</string>
    <string name="no_group_owe_you">No group owe you</string>
    <string name="dashboard">Dashboard</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="friend_details">Friend Details</string>
    <string name="friend_setting">Friend Setting</string>
    <string name="group_setting">Group Setting</string>
    <string name="repay_details">Repay Details</string>
    <string name="total">Total</string>
    <string name="please_enter_group_name">please enter group name</string>
    <string name="please_select_group_type">please select group type</string>
    <string name="please_enter_valid_number">Please enter valid number</string>
    <string name="please_enter_an_amount">please enter an amount</string>
    <string name="you_must_enter_an_amount">you must enter an amount</string>
    <string name="please_select_category">please select category</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="select_gender">Select gender</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>