<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_activity_repay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_activity_repay"
            app:layout_constraintStart_toStartOf="@+id/cv_activity_repay"
            app:layout_constraintTop_toTopOf="@+id/cv_activity_repay">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_repay_activity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_circle_background_color="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_group_name_repay_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/civ_repay_activity"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_payer_name_repay_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/civ_repay_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name_repay_activity" />

            <TextView
                android:id="@+id/tv_paid_repay_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:textColor="@color/black"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name_repay_activity"
                app:layout_constraintStart_toEndOf="@+id/tv_payer_name_repay_activity" />

            <TextView
                android:id="@+id/tv_receiver_name_repay_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_amount"
                android:textColor="@color/black"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name_repay_activity"
                app:layout_constraintStart_toEndOf="@+id/tv_paid_repay_activity" />


            <TextView
                android:id="@+id/tv_amount_repay_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name_repay_activity"
                app:layout_constraintStart_toEndOf="@+id/tv_receiver_name_repay_activity" />

            <TextView
                android:id="@+id/tv_date_repay_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                app:layout_constraintStart_toEndOf="@+id/civ_repay_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_receiver_name_repay_activity" />

            <TextView
                android:id="@+id/tv_time_repay_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                app:layout_constraintStart_toEndOf="@+id/tv_date_repay_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_receiver_name_repay_activity" />

            <TextView
                android:id="@+id/tv_description_repay_activity"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civ_repay_activity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>