<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_group_expenses_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_group_expenses_activity"
            app:layout_constraintStart_toStartOf="@+id/cv_group_expenses_activity"
            app:layout_constraintTop_toTopOf="@+id/cv_group_expenses_activity">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_category_expenses_activity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_circle_background_color="@color/primary"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tv_group_name_expenses_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/group_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tv_you_borrowed_expenses_activity"
                app:layout_constraintStart_toEndOf="@+id/civ_category_expenses_activity"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_persian_name_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/civ_category_expenses_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name_expenses_activity" />

            <TextView
                android:id="@+id/tv_paid_amount_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_amount"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/civ_category_expenses_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_persian_name_expenses_activity" />


            <TextView
                android:id="@+id/tv_you_borrowed_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_borrowed_or_lent"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_you_borrowed_amount_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/amount"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_you_borrowed_expenses_activity" />

            <TextView
                android:id="@+id/tv_date_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                app:layout_constraintStart_toEndOf="@+id/civ_category_expenses_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_paid_amount_expenses_activity" />

            <TextView
                android:id="@+id/tv_time_expenses_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                app:layout_constraintStart_toEndOf="@+id/tv_date_expenses_activity"
                app:layout_constraintTop_toBottomOf="@+id/tv_paid_amount_expenses_activity" />

            <TextView
                android:id="@+id/tv_description_expenses_activity"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civ_category_expenses_activity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>